# rust-evm-indexer

./: .env.example  Cargo.toml  README.md  SECURITY.md  deny.toml  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
docs/: architecture.md  demo.md
migrations/00000000000000_initial_schema/: down.sql  up.sql
migrations/20260509000000_add_event_log_metadata/: down.sql  up.sql
migrations/20260509010000_add_transaction_receipts/: down.sql  up.sql
migrations/20260509020000_add_job_range_uniqueness/: down.sql  up.sql
migrations/20260509030000_remove_backfill_range_job_type/: down.sql  up.sql
migrations/20260509050000_add_reorg_event_mismatches/: down.sql  up.sql
migrations/20260509060000_cleanup_source_schema_and_reorg_links/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/application/: backfill.rs  evm.rs  ingest.rs  mod.rs  ports.rs  reorg.rs
src/cli/: mod.rs
src/config/: mod.rs
src/domain/: chain.rs  checkpoint.rs  event.rs  job.rs  mod.rs  reorg.rs  source.rs
src/infra/: mod.rs
src/infra/evm/: decoder.rs  mod.rs  rpc.rs
src/infra/postgres/: connection.rs  job_repository.rs  ledger_repository.rs  mod.rs  models.rs  repositories.rs  schema.rs
src/infra/telemetry/: metrics.rs  mod.rs  tracing.rs
src/worker/: mod.rs
tests/: application.rs  backfill_planner.rs  ingest_worker.rs  job_repository.rs  ledger_api.rs  metrics.rs  reorg_verification.rs
tests/application/: backfill.rs  ingest.rs  reorg.rs  support.rs
