[package]
name = "indexer-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust EVM token ledger indexer for ERC-20, ERC-721, and ERC-1155 contracts."
license = "MIT"
publish = false

[lib]
name = "indexer_rs"
path = "src/lib.rs"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json", "numeric"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
