[package]
name = "indexer-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust EVM token ledger indexer for ERC-20, ERC-721, and ERC-1155 contracts."
license = "MIT"
publish = false

[lib]
name = "indexer_rs"
path = "src/lib.rs"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
bigdecimal = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json", "numeric"] }
dotenvy = "0.15"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
diesel_migrations = "2"
tower = { version = "0.5", features = ["util"] }
